# edms

./: CONTRIBUTORS.md  Cargo.toml  README.md  demo.db  seed_data.sql
backend/: docker-compose.yml  integration_work.ipynb
backend/compute/: .dockerignore  Cargo.toml  Dockerfile
backend/compute/src/: config.rs  config.yml  endpoint_writer.rs  errors.rs  folder_manager.rs  lib.rs  lock_manager.rs  main.rs  markdown_generator.rs  markdown_meta.rs  zipops.rs
backend/compute/src/api/: handlers.rs  routes.rs
backend/compute/tests/: integration_tests.rs  ipc_child_test.rs  zipops_tests.rs
backend/webserver/: Cargo.toml  Dockerfile  index.html
backend/webserver/libs/edms/: Cargo.toml
backend/webserver/src/: events.rs  main.rs  state.rs
backend/webserver/src/handlers/: callback.rs  dataview.rs  repo.rs  test_view.rs
edms_data/cat-fact/: response-001.json
edms_data/dog-hound/: response-001.json
edms_data/httpbin-anything/: response-001.json
edms_data/httpbin-get/: response-001.json  response-002.json  response-003.json  response-004.json
edms_data/reqres-create/: response-001.json  response-002.json
edms_data/reqres-register/: response-001.json  response-002.json
edms_data/reqres-user-2/: response-001.json  response-002.json  response-003.json  response-004.json  response-005.json
edms_data/wttr-nyc/: response-001.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/common/: AnnotationInput.jsx  FilterBar.jsx  JsonEditor.jsx  MethodBadge.jsx  SearchBar.jsx  SelectionActions.jsx  TagManager.jsx
frontend/src/components/home/: MethodStatsCard.jsx  StatsCard.jsx  ViewAllCard.jsx
frontend/src/components/layout/: BackgroundEffects.jsx  Footer.jsx  Navbar.jsx
frontend/src/components/listview/: EndpointRow.jsx  EndpointTable.jsx  RequestDetail.jsx  RequestList.jsx  RequestSidebar.jsx
frontend/src/components/pages/: HomePage.jsx  ListView.jsx  TestView.jsx
frontend/src/components/testview/: EndpointItem.jsx  HistoryItem.jsx  RequestResponsePanels.jsx  TestControls.jsx  TestSidebar.jsx
frontend/src/hooks/: useMousePosition.js  useScrollDetection.js
frontend/src/utils/: formatBytes.js  generateDummyData.js  getMethodColor.js
src/: config.rs  db.rs  events.rs  main.rs  state.rs
src/handlers/: bookmarks.rs  dataview.rs  mod.rs  test_view.rs
