[package]
name = "rust-webserver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-webserver"
path = "src/main.rs"

# edms-child is NOT here — it lives in compute/ and gets
# copied into this image during the Docker multi-stage build

[dependencies]
compute = {path = "../compute"}
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio-util = "0.7"
serde_yaml = "0.9"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
edms = { path = "libs/edms" }